name:                ply-loader
version:             0.1.0.0
synopsis:            PLY file loader.

description:         PLY is a lightweight file format for representing 3D
                     geometry. The library includes support for
                     placing mesh data into a consistent coordinate
                     frame using Stanford's @.conf@ file format. See
                     /The Stanford 3D Scanning Repository/
                     <http://graphics.stanford.edu/data/3Dscanrep/>
                     for more information.

license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/acowley/ply-loader.git

library
  exposed-modules:     PLY.Data, PLY.Types, PLY.Conf, PLY.Internal.Parsers
                       
  build-depends:       base >= 4.6, 
                       attoparsec >= 0.10, 
                       bytestring >= 0.10,
                       linear >= 0.3,
                       lens >= 3.0,
                       vector >= 0.9,
                       filepath,
                       directory,
                       parallel-io >= 0.3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
